- dashbord, added corrections to layout of first 4 statistic blocks

--- a/vue-admin-template/src/locales/en.json
+++ b/vue-admin-template/src/locales/en.json
@@ -24,7 +24,10 @@
   "TEST_END": "Test End",
   "TEST_PRODUCTIVE": "Test Productive",
   "ACTIONS": "Actions",
+  "IMEI": "IMEI",
 
+  "EDIT": "Edit",
+  "SAVE": "Save",
   "MINIMIZE_PANEL": "Minimize Panel",
   "SEARCH": "Search",
   "FINISH": "Finish"
