vlad added group commands history in terminal

--- a/vue-admin-template/src/utils/locales/ENG.json
+++ b/vue-admin-template/src/utils/locales/ENG.json
@@ -23,6 +23,7 @@
   "COM_MSG019": "Loading...",
   "COM_MSG020": "",
   "COM_MSG021": "",
+  "COM_MSG022": "Clear",
 
   "PROMPT_MSG000": "Error",
   "PROMPT_MSG001": "An issue has been detected, please try again later or contact our support team",
