vlad fixed dasboard totals

--- a/vue-admin-template/src/locales/en.json
+++ b/vue-admin-template/src/locales/en.json
@@ -20,6 +20,7 @@
   "MSISDN": "MSISDN",
   "BUSINESS_UNIT": "Business Unit",
   "RAG": "RAG",
+  "CUSTOM": "Custom",
   "CUSTOMER": "Customer",
   "DATA_SESSION": "Data Session",
   "DATA_USAGE": "Data Usage",
@@ -36,6 +37,15 @@
   "TEST_PRODUCTIVE": "Test Productive",
   "ACTIONS": "Actions",
   "IMEI": "IMEI",
+  "ORGANIZE": "Organize",
+  "IPADDRESS": "IP Address",
+  "PAYPLAN": "PayPlan",
+  "CUSTOMFIELD1": "Custom Field 1",
+  "CUSTOMFIELD2": "Custom Field 2",
+  "CUSTOMFIELD3": "Custom Field 3",
+  "CUSTOMFIELD4": "Custom Field 4",
+  "CUSTOMFIELD5": "Custom Field 5",
+  "UPDATETIME": "Data Update",
 
   "EDIT": "Edit",
   "SAVE": "Save",
