vlad fixed sim man

--- a/vue-admin-template/src/locales/en.json
+++ b/vue-admin-template/src/locales/en.json
@@ -22,6 +22,7 @@
   "RAG": "RAG",
   "CUSTOM": "Custom",
   "CUSTOMER": "Customer",
+  "SERVICEPROFILE": "Service Profile",
   "DATA_SESSION": "Data Session",
   "DATA_USAGE": "Data Usage",
   "SMS_USAGE": "SMS Usage",
@@ -39,7 +40,7 @@
   "IMEI": "IMEI",
   "ORGANIZE": "Organize",
   "IPADDRESS": "IP Address",
-  "PAYPLAN": "PayPlan",
+  "PAYPLAN": "Pay Plan",
   "CUSTOMFIELD1": "Custom Field 1",
   "CUSTOMFIELD2": "Custom Field 2",
   "CUSTOMFIELD3": "Custom Field 3",
