vlad fixed all styles

--- a/vue-admin-template/src/locales/en.json
+++ b/vue-admin-template/src/locales/en.json
@@ -33,6 +33,7 @@
   "ON_STOCK": "On Stock",
   "PRODUCTIVE": "Productive",
   "SUSPENDED": "Suspended",
+  "ACTIVATED": "Activated",
   "TEST": "Test",
   "TEST_END": "Test End",
   "TEST_PRODUCTIVE": "Test Productive",
@@ -47,14 +48,16 @@
   "CUSTOMFIELD4": "Custom Field 4",
   "CUSTOMFIELD5": "Custom Field 5",
   "UPDATETIME": "Data Update",
-
+  "MOBILE": "Mobile",
+  "NUMBER": "Number",
   "EDIT": "Edit",
   "SAVE": "Save",
   "MINIMIZE_PANEL": "Minimize Panel",
   "SEARCH": "Search",
   "CLEAR": "Clear",
   "FINISH": "Finish",
-
+  "IMPORT": "Import",
+  "IMPORT_SIM": "Import SIM",
   "TEXT_COMMON_SEARCH": "Search",
   "TEXT_COMMON_EDIT": "Edit",
   "TEXT_COMMON_DELETE": "Delete",
